--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "de.it_garten.micha.garbagesaver"
         minSdkVersion 10
         targetSdkVersion 23
-        versionCode 2
-        versionName "Braune Tonne"
+        versionCode 3
+        versionName "Celluloseabfall"
     }
     buildTypes {
         release {
@@ -26,4 +26,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
 }
