--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.it_garten.micha.garbagesaver"
-    android:versionCode="2"
-    android:versionName="Braune Tonne">
+    android:versionCode="3"
+    android:versionName="Celluloseabfall">
 
     <application
         android:allowBackup="true"
@@ -16,6 +16,15 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".Show_Erased"
+            android:label="@string/title_activity_show__erased"
+            android:parentActivityName=".Overview"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="de.it_garten.micha.garbagesaver.Overview" />
         </activity>
     </application>
 
