--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.it_garten.micha.garbagesaver"
-    android:versionCode="3"
-    android:versionName="Celluloseabfall">
-
+    package="de.it_garten.micha.garbagesaver">
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -59,6 +57,17 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="de.it_garten.micha.garbagesaver.Overview" />
         </activity>
-    </application>
+        <receiver
+            android:enabled="true"
+            android:name="de.it_garten.micha.garbagesaver.Autostart"
+            android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
 
+        <intent-filter>
+
+            <action android:name="android.intent.action.BOOT_COMPLETED" />
+
+        </intent-filter>
+
+    </receiver>
+    </application>
 </manifest>
